syntax = "proto3";
package sonrhq.sonr.crypto;

option go_package = "github.com/sonr-io/sonr/types/crypto";

message PubKey {
  bytes key = 1;
  string key_type = 2;
}
